Added page-header border-bottom

--- a/css/main.css
+++ b/css/main.css
@@ -496,6 +496,10 @@ img {
 }
 
 /*+ Header (for border-bottom) */
+.page-header {
+  border-bottom: 1px solid var(--header-border-color);
+}
+
 @media screen and (max-width: 767px) {
   .main-nav {
     display: flex;
