--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -1,4 +1,7 @@
 /*+ Header (for border-bottom) */
+.page-header {
+  border-bottom: 1px solid var(--header-border-color);
+}
 
 @media screen and (max-width: 767px) {
   .main-nav {
