Logo in footer corrected

--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,8 @@ img {
 .logo--footer {
   display: inline-block;
   margin-bottom: 20px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .logo__accent {
