--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -30,9 +30,13 @@
   top: 50%;
   left: 50%;
 
-  width: 450px;
-  height: 609px;
+  width: 94%;
+  max-width: 450px;
+  height: 94%;
+  max-height: 609px;
   padding: 40px;
+
+  overflow-y: scroll;
 
   border-radius: 4px;
   background-color: var(--primary-white-color);
@@ -43,8 +47,8 @@
   transition: transform var(--transition-time) var(--timing-function);
 
   @media screen and (min-width: 1200px) {
-    width: 528px;
-    height: 580px;
+    max-width: 528px;
+    max-height: 580px;
   }
 }
 
@@ -200,6 +204,7 @@
   height: 15px;
   margin-right: 7px;
   background-image: url('../images/icon-square-black.svg');
+  flex-shrink: 0;
 
   transition: background-image var(--transition-time) var(--timing-function);
 
