--- a/css/main.css
+++ b/css/main.css
@@ -62,12 +62,8 @@ img {
   list-style: none;
 }
 
-/* Flex for lists in sections */
-.flex {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: calc(var(--card-set-gap) * -1);
-  margin-left: calc(var(--card-set-gap) * -1);
+body.modal-open {
+  overflow: hidden;
 }
 
 .container {
@@ -294,9 +290,12 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
-  height: 609px;
+  width: 94%;
+  max-width: 450px;
+  height: 94%;
+  max-height: 609px;
   padding: 40px;
+  overflow-y: scroll;
   border-radius: 4px;
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -306,8 +305,8 @@ img {
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
-    height: 580px;
+    max-width: 528px;
+    max-height: 580px;
   }
 }
 
@@ -459,6 +458,7 @@ img {
   height: 15px;
   margin-right: 7px;
   background-image: url("../images/icon-square-black.svg");
+  flex-shrink: 0;
   transition: background-image var(--transition-time) var(--timing-function);
 }
 
@@ -538,9 +538,10 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow-y: scroll;
     background-color: var(--primary-white-color);
     padding: 48px 40px;
-    transition: all 250ms linear;
+    transition: all var(--transition-time) var(--timing-function);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -610,13 +611,12 @@ img {
   }
   .mobile-menu-social {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   .mobile-menu-social__item:not(:last-child) {
     padding-right: 10px;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
-  }
-  .mobile-menu-social__item:not(:first-child) {
-    padding-left: 10px;
   }
   .mobile-menu-social__link {
     text-decoration: none;
@@ -659,17 +659,17 @@ img {
   .mobile-menu {
     display: none;
   }
-  /*+ Main-nav */
+  /* Main-nav */
   .main-nav {
     display: flex;
     align-items: center;
   }
-  /*+ Nav (logo + .site-nav) */
+  /* Nav (logo + .site-nav) */
   .nav {
     display: flex;
     align-items: center;
   }
-  /*+ Site nav */
+  /* Site nav */
   .site-nav {
     display: flex;
   }
@@ -714,7 +714,6 @@ img {
     border-radius: 2px;
     background-color: var(--accent-color);
   }
-  /*+ Contacts header */
   .contacts__link {
     display: flex;
     align-items: center;
@@ -784,7 +783,7 @@ img {
 }
 
 .hero__container {
-  width: 360px;
+  max-width: 360px;
   padding-top: 118px;
   padding-bottom: 118px;
   margin-left: auto;
@@ -795,7 +794,7 @@ img {
   .hero__container {
     padding-top: 200px;
     padding-bottom: 200px;
-    width: 700px;
+    max-width: 700px;
   }
 }
 
