--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -67,7 +67,7 @@
 }
 
 .hero__container {
-  width: 360px;
+  max-width: 360px;
   padding-top: 118px;
   padding-bottom: 118px;
   margin-left: auto;
@@ -76,7 +76,7 @@
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
-    width: 700px;
+    max-width: 700px;
   }
 }
 
